# VIBE

./: .gitignore  README.md  pyproject.toml
bash/: job.slurm
notebooks/: Figure_analysis_example.ipynb  Run_VIBE_example.ipynb
src/vibe/: VIBE.py  bash_config.py  mmmUtils_v2.py  regularized_propagation_v2.py  rossendorfer_farbenliste.py  utils.py  wavefront_fitting.py
src/vibe/optical_constants/: Be.txt  diamond.txt
yamls/: Simulation_definitions.yaml  Simulation_example_1.yaml  yaml_2Dscan_BeamSize_O0.py  yaml_2Dscan_O1A1.py  yaml_2Dscan_O1A1Beamsize.py  yaml_2Dscan_Serration_parameters.py  yaml_2Dscan_TCSlit_Div.py  yaml_scan_A1Size.py  yaml_scan_O2size.py  yaml_scan_PH_end_size.py
